<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear_layout1"
    tools:context="com.example.fostersoftsol01.pickmehere.Activity.Login">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_gravity=""
        android:background="@color/colorPrimaryDark"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbarThumbVertical="@null"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.80"
                android:orientation="vertical"
                android:weightSum="5">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/txt_background"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:fontFamily="sans-serif"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:textAlignment="center"

                    android:textSize="15sp">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/et_password"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/txt_background"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:textAlignment="center"
                    android:textSize="15sp">

                </EditText>


                <TextView
                    android:id="@+id/tv_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:linksClickable="false"
                    android:text="@string/forgot"
                    android:textAlignment="textEnd"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@color/button_background"
                    android:text="LOGIN"
                    android:textStyle="bold"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="18sp" />


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="20dp">

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_newAccount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="64.45"
                android:text="@string/new_account"
                android:textAlignment="center"
                android:textSize="18sp"></TextView>


        </LinearLayout>

    </ScrollView>




</LinearLayout>
