<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear_layout2"
    android:orientation="vertical"
    tools:context="com.example.fostersoftsol01.pickmehere.Register">
    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="SignUp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/textColorPrimary"/>
    <ScrollView
        android:id="@+id/sc_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@null">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative_view">

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/firstname"
                android:textAlignment="center"
                android:inputType="text"
                android:textSize="18sp"
                android:minEms="4"
                android:imeOptions="flagNoFullscreen"
                android:background="@drawable/txt_background"
                android:fontFamily="sans-serif"
                android:layout_below="@+id/toolbar"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true">
                <requestFocus
                    />
            </EditText>
            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Last Name"
                android:background="@drawable/txt_background"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:inputType="text"
                android:textSize="18sp"
                android:imeOptions="flagNoFullscreen"
                android:fontFamily="sans-serif"
                android:minEms="4"
                android:layout_below="@+id/et_firstName"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true" />
            <EditText
                android:id="@+id/et_register_Email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Email Id"
                android:background="@drawable/txt_background"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:imeOptions="flagNoFullscreen"
                android:fontFamily="sans-serif"
                android:minEms="4"
                android:layout_below="@+id/et_lastName"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true" />
            <EditText
                android:id="@+id/et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/et_register_Email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:imeOptions="flagNoFullscreen"
                android:background="@drawable/txt_background"
                android:maxLength="10"
                android:fontFamily="sans-serif"
                android:hint="Phone Number"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/et_phoneNumber"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:hint="Password"
                android:maxLength="8"
                android:imeOptions="flagNoFullscreen"
                android:background="@drawable/txt_background"
                android:fontFamily="sans-serif"
                android:minEms="4"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_register_conforimPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/et_register_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:hint="Confirm-Password"
                android:textSize="18sp"
                android:imeOptions="flagNoFullscreen"
                android:background="@drawable/txt_background"
                android:fontFamily="sans-serif"
                android:maxLength="8"
                android:minEms="4"
                android:inputType="textPassword"
                android:textAlignment="center" />






            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relative_view2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/et_register_conforimPassword">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chbx_click"
                    android:checked="true"
                    android:visibility="visible"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:id="@+id/tvTnC"
                    android:layout_marginTop="13dp"
                    android:textColor="@color/navigationBarColor"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="textStart"
                    android:text="@string/tnc"
                    tools:ignore="RtlCompat"
                    android:layout_toRightOf="@+id/chbx_click"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>








            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/btn_signup"
                android:layout_below="@+id/relative_view2"
                android:layout_centerHorizontal="true"
                android:text="@string/signUp"
                android:background="@color/button_background"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/textColorPrimary"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/tv_haveAnAccount"
                android:layout_below="@+id/btn_signup"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:text="@string/have_account"
                android:layout_marginTop="20dp"/>



        </RelativeLayout>

    </ScrollView>

</LinearLayout>
